# DataPrepX_v2

./: .gitignore  Makefile  docker-compose.dev.yml  docker-compose.yml
infra/postgres/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_full_schema.down.sql  0002_full_schema.up.sql
services/agent-orchestrator/: Dockerfile  main.py  pyproject.toml
services/agent-orchestrator/tests/: test_healthz.py
services/frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
services/frontend/src/: App.tsx
services/frontend/src/__tests__/: App.test.tsx
services/gateway-go/: Dockerfile  go.mod  go.sum
services/gateway-go/cmd/gateway/: main.go
services/gateway-go/internal/jobs/: datasets.go  handlers.go  hub.go  jobs.go  model.go  store.go  validator.go
services/ml-engine/: Dockerfile  pyproject.toml
services/ml-engine/app/: main.py
services/ml-engine/app/pipeline/: cli.py  db.py  job_schema.py  lineage.py  validation_gates.py
services/ml-engine/config/: gates.example.yaml
services/ml-engine/tests/: test_healthz.py  test_lineage.py  test_validation.py
shared/schemas/: job.schema.json  job_status.schema.json
